--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -16,3 +16,12 @@ jobs:
     - uses: actions/checkout@v2
     - name: Build the Docker image
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+    - name: Docker Login
+      uses: docker/login-action@v1.14.1
+      with:
+    # Server address of Docker registry. If not set then will default to Docker Hub
+            # Username used to log against the Docker registry
+        username: ${{secrets.DOCKER_USER}}# optional
+    # Password or personal access token used to log against the Docker registry
+        password: ${{secrets.DOCKER_PASSWORD}}
+   
