--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -18,7 +18,7 @@ jobs:
       run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
     - name: docker login
       run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
-    - run: docker push ${{secrets.DOCKER_USER}}/shaaban-vote --tag my-image-name:$(date +%s)
+    - run: docker push ${{secrets.DOCKER_USER}}/shaaban-vote:my-image-name:$(date +%s)
     - name: Docker Login
       uses: docker/login-action@v1.14.1
       with:
