--- a/.github/workflows/docker-image.yml
+++ b/.github/workflows/docker-image.yml
@@ -15,10 +15,10 @@ jobs:
     steps:
     - uses: actions/checkout@v2
     - name: Build the Docker image
-      run: docker build . --file Dockerfile --tag my-image-name:$(date +%s)
+      run: docker build . --file Dockerfile --tag latest
     - name: docker login
       run: docker login -u ${{secrets.DOCKER_USER}} -p ${{secrets.DOCKER_PASSWORD}}
-    - run: docker push ${{secrets.DOCKER_USER}}/shaaban-vote:my-image-name:$(date +%s)
+    - run: docker push ${{secrets.DOCKER_USER}}/shaaban-vote
     - name: Docker Login
       uses: docker/login-action@v1.14.1
       with:
